@@ -7,10 +7,8 @@ Plot joint posterior of all catalog sources in galactic coordinates.
 
 #%%
 # Load catalogs and combine chain samples
-import os
 import pandas as pd
 import numpy as np
-import healpy as hp
 import ligo.skymap.plot
 import matplotlib.pyplot as plt
 from lisacattools.catalog import GWCatalogs, GWCatalogType
@@ -19,25 +17,22 @@ from lisacattools import convert_ecliptic_to_galactic, HPhist
 # Start by loading the main catalog file processed from GBMCMC outputs
 catPath = "../../tutorial/data/ucb"
 catalogs = GWCatalogs.create(GWCatalogType.UCB, catPath, "cat15728640_v2.h5")
-final_catalog = catalogs.get_last_catalog()
-detections_attr = final_catalog.get_attr_detections()
-detections = final_catalog.get_detections(detections_attr)
-
+catalog = catalogs.get_last_catalog()
 
 # loop over all sources in catalog and append chain samples to new dataframe
-sources = list(detections.index)
+sources = list(catalog.get_detections())
+
 samples_list = list()
 for source in sources:
-
+    
     # get chain samples
-    samples = final_catalog.get_source_sample(source)
-
-    # store name and chain size (proportional to evidence)
-    samples.insert(len(samples.columns), "Source", source, True)
-    samples.insert(len(samples.columns), "Chain Length", len(samples), True)
-    samples_list.append(
-        samples[["Source", "Ecliptic Latitude", "Ecliptic Longitude", "Chain Length"]]
-    )
+    samples = catalog.get_source_sample(source,['coslat','Ecliptic Longitude'])
+    
+    # recompute ecliptic latitude to correct error in HDF5 files
+    samples['Ecliptic Latitude'] = np.pi/2 - np.arccos(samples['coslat'])
+    
+    # append sky location parameters to joint posterior list
+    samples_list.append(samples[['Ecliptic Latitude','Ecliptic Longitude']])
 
 # combine all source samples into one dataframe
 all_sources = pd.concat(samples_list)
