@@ -7,6 +7,7 @@ Sphinx==3.5.1
 sphinx-gallery==0.8.2
 sphinx-rtd-theme==0.5.1
 ChainConsumer==0.33.0
+corner==2.1.0
 robotframework==3.2.2
 coverage==5.3.1
 m2r2==0.2.7
