@@ -1,4 +1,14 @@
-### update to webpage? (HEAD -> main)
+### fix galactic coordinate examples (HEAD -> main)
+>Wed, 17 Mar 2021 12:33:06 -0500
+
+>Author: Tyson Littenberg (tyson.littenberg@ligo.org)
+
+>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)
+
+
+
+
+### update to webpage? (origin/main, origin/HEAD)
 >Tue, 16 Mar 2021 16:04:11 -0500
 
 >Author: Tyson Littenberg (tyson.littenberg@ligo.org)
@@ -8,7 +18,7 @@
 
 
 
-### trying workflow after clean clone (origin/main, origin/HEAD)
+### trying workflow after clean clone
 >Tue, 16 Mar 2021 13:35:54 -0500
 
 >Author: Tyson Littenberg (tyson.littenberg@ligo.org)
